--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,9 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "rlucas7"
   kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : "3164100"
 
   # Social media
   bluesky          : "bsky.app" # Replace this with you Bluesky username
